 fdo#66575 - MathML export: fix errors with newline, binom and stack.

Change-Id: I6c66864381a6a5b7415e9fae682e50865b3f76db