starmath/source/parse.cxx
@@ -1072,7 +1072,7 @@ void SmParser::Line()
     //this is to avoid a formula tree without any caret
     //positions, in visual formula editor.
     if(ExpressionArray.empty())
-        ExpressionArray.push_back(new SmExpressionNode(SmToken()));
+        ExpressionArray.push_back(new SmExpressionNode(m_aCurToken));
 
     SmStructureNode *pSNode = new SmLineNode(m_aCurToken);
     pSNode->SetSubNodes(ExpressionArray);
